# amethyst-scripting-lab

./: Cargo.toml  README.md
schema-parser/: .gitignore  example-schema.rs
schema-parser/src/: ast.rs  main.rs
specs-scripting/: .gitignore  Cargo.toml
specs-scripting/src/: main.rs
src/: ast.rs  example-schema.rs  main.rs
