[package]
name = "amethyst-scripting"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.15", features = ["nightly"] }
generic-array = "0.13"
typenum = "1.10"
